<resources>
    <string name="app_name">Nazare</string>
    <string name="sunahare_nazare_txt">Sunahare Nazare</string>
    <string name="music_txt">Music</string>
    <string name="video_txt">Video</string>
    <string name="image_txt">Image</string>
    <string name="objectname_txt">Objectname</string>
    <string name="images_txt">images</string>
    <string name="objectnames_txt">objectnames</string>
    <string name="photo_txt">photo</string>
    <string name="previous_txt">previous</string>
    <string name="pause_txt">pause</string>
    <string name="next_txt">next</string>
    <string name="play_txt">play</string>

</resources>