<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GalleryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunahare_nazare_txt"
        android:layout_gravity="center"
        android:textSize="28sp"
        android:textStyle="italic"
        android:fontFamily="cursive"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="0.9">

        <TextView
            android:id="@+id/musictext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="5dp"
            android:layout_weight="0.3"
            android:text="@string/music_txt"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/videotext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="5dp"
            android:text="@string/video_txt"
            android:textSize="22sp"
            android:layout_weight="0.3"/>

        <TextView
            android:id="@+id/imagetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="5dp"
            android:text="@string/image_txt"
            android:textSize="22sp"
            android:layout_weight="0.3"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>