<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GalleryViewActivity">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/photo_txt"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_weight="0.07"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/previous"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.2"
            android:contentDescription="@string/previous_txt"
            android:src="@drawable/baseline_skip_previous_24" />

        <ImageButton
            android:id="@+id/pause"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.2"
            android:contentDescription="@string/pause_txt"
            android:src="@drawable/baseline_pause_24" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.2"
            android:contentDescription="@string/next_txt"
            android:src="@drawable/baseline_skip_next_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>